--- a/week05/quiz.html
+++ b/week05/quiz.html
@@ -24,12 +24,12 @@
   <div.container>
     <div class="row mb-4">
       <div class="col-lg-12">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >คณะ / สาขาที่ต้องการสมัคร <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           placeholder="เลือก"
           name="date1"
           required
@@ -39,24 +39,24 @@
 
     <div class="row mb-4">
       <div class="col-lg-3">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >สัญชาติ <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           placeholder="เลือก"
           name="date2"
           required
         />
       </div>
       <div class="col-lg-6">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >เพศ <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           placeholder="เลือก"
           name="date3"
           required
@@ -66,45 +66,45 @@
 
     <div class="row mb-4">
       <div class="col-lg-4">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >คำนำหน้าชื่อ <span class="text-danger">* (ชื่อเต็ม)</span></label
         >
-        <input type="text" class="from-control" name="fname" required />
+        <input type="text" class="form-control" name="fname" required />
       </div>
       <div class="col-lg-3">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >ชื่อ <span class="text-danger">*</span></label
         >
-        <input type="text" class="from-control" name="fname" required />
+        <input type="text" class="form-control" name="fname" required />
       </div>
       <div class="col-lg-3">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >นามสกุล <span class="text-danger">*</span></label
         >
-        <input type="text" class="from-control" name="fname" required />
+        <input type="text" class="form-control" name="fname" required />
       </div>
     </div>
 
     <div class="row mb-4">
       <div class="col-lg-3">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >บัตรประชาชน <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           name="fname"
           id="fname"
           required
         />
       </div>
       <div class="col-lg-6">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >เบอร์โทร <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           name="fname"
           id="fname"
           required
@@ -114,45 +114,45 @@
 
     <div class="row mb-4">
       <div class="col-lg-3">
-        <label for="" class="from-lable">ID Line (ถ้ามี)</label>
-        <input type="text" class="from-control" id="fname" required />
+        <label for="" class="form-lable">ID Line (ถ้ามี)</label>
+        <input type="text" class="form-control" id="fname" required />
       </div>
       <div class="col-lg-3">
-        <label for="" class="from-lable">Facebook (ถ้ามี)</label>
-        <input type="text" class="from-control" id="fname" required />
+        <label for="" class="form-lable">Facebook (ถ้ามี)</label>
+        <input type="text" class="form-control" id="fname" required />
       </div>
       <div class="col-lg-3">
-        <label for="" class="from-lable">อีเมล (ถ้ามี)</label>
-        <input type="text" class="from-control" id="fname" required />
+        <label for="" class="form-lable">อีเมล (ถ้ามี)</label>
+        <input type="text" class="form-control" id="fname" required />
       </div>
     </div>
 
     <div class="row mb-4">
       <div class="col-lg-3">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >วุฒิการศึกษา <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           placeholder="เลือก"
           name="date4"
           required
         />
       </div>
       <div class="col-lg-4">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >ชื่อสถานศึกษาเดิม <span class="text-danger">*</span></label
         >
-        <input type="text" class="from-control" id="fname" required />
+        <input type="text" class="form-control" id="fname" required />
       </div>
       <div class="col-lg-3">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >จังหวัด <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           placeholder="เลือก"
           name="date4"
           required
@@ -162,28 +162,28 @@
 
     <div class="row mb-4">
       <div class="col-lg-4">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >สาขาวิชาที่เรียนจบ <span class="text-danger">*</span></label
         >
-        <input type="text" class="from-control" name="date5" required />
+        <input type="text" class="form-control" name="date5" required />
       </div>
       <div class="col-lg-6">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >ผลการเรียนเฉลี่ย (GPAX)<span class="text-danger">*</span></label
         >
-        <input type="text" class="from-control" name="date6" required />
+        <input type="text" class="form-control" name="date6" required />
       </div>
     </div>
 
     <div class="row mb-4">
       <div class="col-lg-12">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >มีความต้องการกู้ยืมเพื่อการศึกษา
           <span class="text-danger">*</span></label
         >
         <input
           type="text"
-          class="from-control"
+          class="form-control"
           placeholder="เลือก"
           name="date7"
           required
@@ -193,12 +193,12 @@
 
     <div class="row mb-4">
       <div class="col-lg-6">
-        <label for="" class="from-lable"
+        <label for="" class="form-lable"
           >เอกสารแนบ <span class="text-danger">(แฟ้มสะสมงาน)</span></label
         >
         <input
           type="file"
-          class="from-control"
+          class="form-control"
           placeholder="เลือก"
           name="date7"
           required
