--- a/week04/newproduct.html
+++ b/week04/newproduct.html
@@ -52,33 +52,24 @@
       </div>
       <hr />
       <div class="row mb-4">
-        <table border=1>
+        <table class="table table-bordered">
+          <thead>
             <tr>
-              <th>น้ำหนัก</th>
-              <th>ภายในกรุงเทพ</th> 
-              <th>ต่างจังหวัด</th>
+              <th scope="col">สถานที่</th>
+              <th scope="col">ค่าส่ง</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>กรุงเทพฯ</td>
+              <td>35 บาท</td>
             </tr>
             <tr>
-              <td>400 กรัม</td>
-              <td>100 บาท</td>
-              <td>120 บาท</td>
+              <td>ต่างจังหวัด</td>
+              <td>65 บาท</td>
             </tr>
-            <tr>
-              <td>1 กิโลกรัม</td>
-              <td>140 บาท</td>
-              <td>160 บาท</td>
-            </tr> 
-            <tr>
-              <td>1.2 กิโลกรัม</td>
-              <td>150 บาท</td>
-              <td>170 บาท</td>
-            </tr> 
-            <tr>
-              <td>10 กิโลกรัม</td>
-              <td>700 บาท</td>
-              <td>720 บาท</td>
-            </tr> 
-          </table>
+          </tbody>
+        </table>
       </div>
     </div>
     <script
