--- a/week09/exercise2.html
+++ b/week09/exercise2.html
@@ -95,7 +95,7 @@
             border-radius: 25px;
           "
         >
-          <i class="bi bi-building"></i>
+        <i class="bi bi-facebook"></i>
         </div>
         <div>Hotel</div>
       </div>
